--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "lint:format:fix": "prettier -wl ./ '!pnpm-lock.yaml' --cache"
   },
   "devDependencies": {
-    "@nolebase/vitepress-plugin-enhanced-readabilities": "^1.28.0",
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "2.0.0-rc8",
     "prettier": "^3.2.5",
-    "vitepress": "^1.1.0",
+    "vitepress": "^1.1.3",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-google-analytics": "^1.0.2",
     "vitepress-plugin-tabs": "^0.5.0",
     "vitepress-sidebar": "^1.22.0",
-    "vue": "^3.4.21"
+    "vue": "^3.4.23"
   },
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@9.0.4",
   "engines": {
-    "pnpm": ">=8",
+    "pnpm": ">=9",
     "node": ">=20"
   },
   "prettier": {
