--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -22,34 +22,34 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.10.0",
-    "eslint": "^8.57.0",
+    "css-loader": "^7.1.1",
+    "eslint": "8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-yml": "^1.13.2",
+    "eslint-plugin-yml": "^1.14.0",
     "glob": "^10.3.12",
-    "mini-css-extract-plugin": "^2.8.1",
+    "mini-css-extract-plugin": "^2.9.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^8.1.1",
     "postcss-perfectionist": "^2.3.9",
-    "postcss-rtlcss": "^5.1.0",
+    "postcss-rtlcss": "^5.1.2",
     "prettier": "^3.2.5",
-    "sass": "^1.72.0",
-    "sass-loader": "^14.1.1",
-    "stylelint": "^16.3.1",
-    "stylelint-config-standard-scss": "^13.0.0",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1",
+    "stylelint": "^16.4.0",
+    "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
     "stylelint-scss": "^6.2.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
-  "packageManager": "pnpm@8.15.4",
+  "packageManager": "pnpm@9.0.6",
   "engines": {
-    "pnpm": ">=8",
+    "pnpm": ">=9",
     "node": ">=20"
   },
   "eslintConfig": {
