--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,33 @@
 version: 2
 updates:
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: monthly
+    commit-message:
+      prefix: '⬆️ '
+    groups:
+      actions-dependencies:
+        patterns:
+          - '*'
+
+  - package-ecosystem: npm
+    directory: /
+    schedule:
+      interval: monthly
+    commit-message:
+      prefix: '⬆️ '
+    groups:
+      theme-dependencies:
+        patterns:
+          - '*'
+
   - package-ecosystem: npm
     directory: /app/Drupal/nts_theme
     schedule:
       interval: monthly
+    commit-message:
+      prefix: '⬆️ '
     groups:
       theme-dependencies:
         patterns:
