--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "scripts": {
     "dev": "webpack --progress --watch",
-    "build": "webpack --progress --mode=production",
+    "build": "webpack --progress --mode production --node-env production ",
     "lint": "run-p -cls lint:js lint:style lint:format",
     "lint:fix": "run-p -cls lint:*:fix",
     "lint:js": "eslint js --no-error-on-unmatched-pattern --color",
@@ -30,24 +30,24 @@
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-yml": "^1.14.0",
-    "glob": "^10.3.12",
+    "glob": "^10.3.15",
     "mini-css-extract-plugin": "^2.9.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^8.1.1",
     "postcss-perfectionist": "^2.3.9",
     "postcss-rtlcss": "^5.1.2",
     "prettier": "^3.2.5",
-    "sass": "^1.75.0",
+    "sass": "^1.77.1",
     "sass-loader": "^14.2.1",
-    "stylelint": "^16.4.0",
+    "stylelint": "^16.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.2.1",
+    "stylelint-scss": "^6.3.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
-  "packageManager": "pnpm@9.0.6",
+  "packageManager": "pnpm@9.1.0",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
