--- a/package.json
+++ b/package.json
@@ -32,21 +32,14 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-order": "^6.0.4"
   },
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.1",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
   },
   "prettier": {
     "singleQuote": true,
+    "proseWrap": "always",
     "bracketSameLine": true
-  },
-  "stylelint": {
-    "extends": [
-      "./web/core/.stylelintrc.json"
-    ],
-    "ignoreFiles": [
-      "*/node_modules/**/*"
-    ]
   }
 }
