--- a/.github/actions/setup-validation/action.yml
+++ b/.github/actions/setup-validation/action.yml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: 📋 Install Task
+      shell: bash
+      run: sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b /usr/local/bin
+
     - name: 🐘 Setup PHP ${{ inputs.php }}
       uses: shivammathur/setup-php@v2
       with:
