--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -35,9 +35,9 @@
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^8.1.1",
     "postcss-perfectionist": "^2.3.9",
-    "postcss-rtlcss": "^5.1.2",
+    "postcss-rtlcss": "^5.2.0",
     "prettier": "^3.2.5",
-    "sass": "^1.77.1",
+    "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
     "stylelint": "^16.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
@@ -47,7 +47,7 @@
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.1",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
@@ -60,6 +60,7 @@
   },
   "prettier": {
     "singleQuote": true,
+    "proseWrap": "always",
     "bracketSameLine": true
   },
   "stylelint": {
