--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "lint:format:fix": "prettier -wl ./ '!pnpm-lock.yaml' --cache"
   },
   "devDependencies": {
-    "@nolebase/vitepress-plugin-enhanced-readabilities": "2.0.0-rc8",
+    "@nolebase/vitepress-plugin-enhanced-readabilities": "2.0.0",
     "prettier": "^3.2.5",
-    "vitepress": "^1.1.4",
+    "vitepress": "^1.2.2",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-google-analytics": "^1.0.2",
     "vitepress-plugin-tabs": "^0.5.0",
-    "vitepress-sidebar": "^1.22.0",
+    "vitepress-sidebar": "^1.23.2",
     "vue": "^3.4.27"
   },
-  "packageManager": "pnpm@9.1.0",
+  "packageManager": "pnpm@9.1.3",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
