--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -19,10 +19,22 @@
     "lint:format:fix": "prettier styles js -wl --cache --no-error-on-unmatched-pattern",
     "postinstall": "sed -i '/\"airbnb-base\",/d;/^ *$/d' ../../../web/core/.eslintrc.json || true"
   },
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer": "^10.4.19",
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.1",
+    "css-loader": "^7.1.2",
+    "glob": "^10.4.1",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss-loader": "^8.1.1",
+    "postcss-perfectionist": "^2.3.9",
+    "postcss-rtlcss": "^5.3.0",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-remove-empty-scripts": "^1.0.4"
+  },
+  "devDependencies": {
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -30,24 +42,14 @@
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-yml": "^1.14.0",
-    "glob": "^10.3.15",
-    "mini-css-extract-plugin": "^2.9.0",
     "npm-run-all": "^4.1.5",
-    "postcss-loader": "^8.1.1",
-    "postcss-perfectionist": "^2.3.9",
-    "postcss-rtlcss": "^5.2.0",
     "prettier": "^3.2.5",
-    "sass": "^1.77.2",
-    "sass-loader": "^14.2.1",
-    "stylelint": "^16.5.0",
+    "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.3.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-remove-empty-scripts": "^1.0.4"
+    "stylelint-scss": "^6.3.0"
   },
-  "packageManager": "pnpm@9.1.1",
+  "packageManager": "pnpm@9.1.4",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
