--- a/.github/workflows/ci-gh-pages.yml
+++ b/.github/workflows/ci-gh-pages.yml
@@ -1,4 +1,4 @@
-name: 🏗️ CI
+name: 🔁 CI | ⚡️ VitePress
 
 on:
   push:
@@ -49,9 +49,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: 🟧 Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: latest
+        uses: pnpm/action-setup@v4
 
       - name: ❇️ Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v4
