--- a/.github/workflows/cd-gh-pages.yml
+++ b/.github/workflows/cd-gh-pages.yml
@@ -1,4 +1,4 @@
-name: 🚀 CD
+name: 🚀 CD | ⚡️ VitePress
 
 on:
   push:
@@ -55,9 +55,7 @@ jobs:
           fetch-depth: 0
 
       - name: 🟧 Setup pnpm
-        uses: pnpm/action-setup@v3
-        with:
-          version: latest
+        uses: pnpm/action-setup@v4
 
       - name: ❇️ Setup Node.js
         uses: actions/setup-node@v4
