Update Drupal to 10.3

--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,19 @@
         "drupal-notes/nts_core": "^1.0@dev",
         "drupal-notes/nts_theme": "^1.0@dev",
         "drupal/admin_toolbar": "^3.4",
-        "drupal/core-composer-scaffold": "^10.2",
-        "drupal/core-recommended": "^10.2",
+        "drupal/core-composer-scaffold": "^10.3",
+        "drupal/core-recommended": "^10.3",
         "drupal/gin": "^3.0@RC",
-        "drupal/gin_login": "^2.0",
+        "drupal/gin_login": "^2.1",
         "drush/drush": "^12.5",
         "skilldlabs/drupal-cleanup": "^1.4"
     },
     "require-dev": {
         "chi-teck/drupal-coder-extension": "^2.0@beta",
+        "drupal/core-dev": "^10.3",
         "mglaman/drupal-check": "^1.4",
         "palantirnet/drupal-rector": "^0.20",
-        "vincentlanglet/twig-cs-fixer": "^2.10"
+        "vincentlanglet/twig-cs-fixer": "^2.11"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -43,7 +44,8 @@
             "dealerdirect/phpcodesniffer-composer-installer": true,
             "drupal/core-composer-scaffold": true,
             "skilldlabs/drupal-cleanup": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         },
         "sort-packages": true
     },
