--- a/app/Drupal/nts_theme/package.json
+++ b/app/Drupal/nts_theme/package.json
@@ -23,14 +23,14 @@
     "autoprefixer": "^10.4.19",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
-    "glob": "^10.4.1",
+    "glob": "^10.4.2",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss-loader": "^8.1.1",
     "postcss-perfectionist": "^2.3.9",
     "postcss-rtlcss": "^5.3.0",
-    "sass": "^1.77.4",
+    "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
-    "webpack": "^5.91.0",
+    "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
@@ -43,13 +43,14 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-yml": "^1.14.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
-    "stylelint-scss": "^6.3.0"
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.3.2"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.4.0",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
