--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint:format:fix": "prettier app !**/pnpm-lock.yaml -wl --cache --no-error-on-unmatched-pattern"
   },
   "devDependencies": {
-    "cspell": "^8.8.3",
+    "cspell": "^8.9.1",
     "eslint": "8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
@@ -27,12 +27,13 @@
     "eslint-plugin-jquery": "^1.5.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-yml": "^1.14.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.2",
     "stylelint": "^16.6.1",
-    "stylelint-config-standard": "^36.0.0",
-    "stylelint-order": "^6.0.4"
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
+    "stylelint-prettier": "^5.0.0"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@9.4.0",
   "engines": {
     "pnpm": ">=9",
     "node": ">=20"
