--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,20 +1,16 @@
 name: drupal
 type: drupal
 docroot: web
-php_version: '8.3'
-webserver_type: nginx-fpm
-xdebug_enabled: false
 database:
   type: mariadb
   version: '10.11'
+php_version: '8.3'
 nodejs_version: '20'
+webserver_type: nginx-fpm
+xdebug_enabled: false
 hooks:
   pre-start:
+    # Add pnpm and task to ddev if not already installed.
     - exec-host: |
-        if ! ddev get --installed | grep -q 'envsa/ddev-pnpm'; then
-          ddev get envsa/ddev-pnpm
-        else
-          echo "Installed ddev-pnpm from envsa/ddev-pnpm"
-        fi
-
-    # - exec-host: 'ddev get gebruederheitz/ddev-taskfile'
+        ddev get --installed | grep -q 'envsa/ddev-pnpm' || ddev get envsa/ddev-pnpm &>/dev/null
+        ddev get --installed | grep -q 'gebruederheitz/ddev-taskfile' || ddev get gebruederheitz/ddev-taskfile &>/dev/null
