--- a/composer.json
+++ b/composer.json
@@ -4,26 +4,27 @@
 	"license": "GPL-3.0-or-later",
 	"type": "project",
 	"require": {
-		"php": ">=8.3",
-		"typo3/cms-backend": "^13.2",
-		"typo3/cms-belog": "^13.2",
-		"typo3/cms-beuser": "^13.2",
-		"typo3/cms-core": "^13.2",
-		"typo3/cms-extbase": "^13.2",
-		"typo3/cms-extensionmanager": "^13.2",
-		"typo3/cms-felogin": "^13.2",
-		"typo3/cms-filelist": "^13.2",
-		"typo3/cms-fluid": "^13.2",
-		"typo3/cms-fluid-styled-content": "^13.2",
-		"typo3/cms-form": "^13.2",
-		"typo3/cms-frontend": "^13.2",
-		"typo3/cms-install": "^13.2",
-		"typo3/cms-rte-ckeditor": "^13.2",
-		"typo3/cms-seo": "^13.2",
-		"typo3/cms-setup": "^13.2",
-		"typo3/cms-sys-note": "^13.2",
-		"typo3/cms-t3editor": "^13.2",
-		"typo3/cms-tstemplate": "^13.2"
+		"php": "^8.2",
+		"helhum/typo3-console": "^8.1",
+		"typo3/cms-backend": "^12.4",
+		"typo3/cms-belog": "^12.4",
+		"typo3/cms-beuser": "^12.4",
+		"typo3/cms-core": "^12.4",
+		"typo3/cms-extbase": "^12.4",
+		"typo3/cms-extensionmanager": "^12.4",
+		"typo3/cms-felogin": "^12.4",
+		"typo3/cms-filelist": "^12.4",
+		"typo3/cms-fluid": "^12.4",
+		"typo3/cms-fluid-styled-content": "^12.4",
+		"typo3/cms-form": "^12.4",
+		"typo3/cms-frontend": "^12.4",
+		"typo3/cms-install": "^12.4",
+		"typo3/cms-rte-ckeditor": "^12.4",
+		"typo3/cms-seo": "^12.4",
+		"typo3/cms-setup": "^12.4",
+		"typo3/cms-sys-note": "^12.4",
+		"typo3/cms-t3editor": "^12.4",
+		"typo3/cms-tstemplate": "^12.4"
 	},
 	"require-dev": {
 		"typo3/coding-standards": "^0.8"
@@ -40,7 +41,7 @@
 			"typo3/cms-composer-installers": true
 		},
 		"platform": {
-			"php": "8.3.8"
+			"php": "8.2.22"
 		},
 		"sort-packages": true
 	},
