Add taskfile and github action

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -4,9 +4,14 @@ docroot: web
 database:
   type: mariadb
   version: '10.11'
-php_version: '8.2'
+php_version: '8.3'
 nodejs_version: '20'
 webserver_type: nginx-fpm
 xdebug_enabled: false
 web_environment:
   - 'TYPO3_CONTEXT=Development/DDEV'
+hooks:
+  pre-start:
+    # Add task to ddev if not already installed.
+    - exec-host: |
+        ddev get --installed | grep -q 'gebruederheitz/ddev-taskfile' || ddev get gebruederheitz/ddev-taskfile &>/dev/null
