--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"license": "GPL-3.0-or-later",
 	"type": "project",
 	"require": {
-		"php": "^8.2",
+		"php": "^8.3",
 		"helhum/typo3-console": "^8.1",
 		"typo3/cms-backend": "^12.4",
 		"typo3/cms-belog": "^12.4",
@@ -19,6 +19,8 @@
 		"typo3/cms-form": "^12.4",
 		"typo3/cms-frontend": "^12.4",
 		"typo3/cms-install": "^12.4",
+		"typo3/cms-lowlevel": "^12.4",
+		"typo3/cms-reports": "^12.4",
 		"typo3/cms-rte-ckeditor": "^12.4",
 		"typo3/cms-seo": "^12.4",
 		"typo3/cms-setup": "^12.4",
@@ -41,7 +43,7 @@
 			"typo3/cms-composer-installers": true
 		},
 		"platform": {
-			"php": "8.2.22"
+			"php": "8.3"
 		},
 		"sort-packages": true
 	},
