--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
 		"typo3/cms-tstemplate": "^12.4"
 	},
 	"require-dev": {
+		"ssch/typo3-rector": "^2.6",
 		"typo3/coding-standards": "^0.8"
 	},
 	"repositories": {
