--- a/taskfile.yml
+++ b/taskfile.yml
@@ -15,17 +15,55 @@ tasks:
   default:
     cmd: 'task --list-all'
 
+  typo3:
+    label: 'Typo3'
+    desc: 'Runs `typo3` command.'
+    requires:
+      vars:
+        - COMPOSER_BIN_DIR
+    cmd: '{{.PHP_BIN}} {{.COMPOSER_BIN_DIR}}/typo3 {{.CLI_ARGS}}'
+
+  cache:clear:
+    label: 'Clear Cache'
+    desc: 'Clear all cache in typo3'
+    aliases:
+      - c
+      - cc
+      - cr
+      - cf
+    cmds:
+      - task: typo3
+        vars: { CLI_ARGS: 'cache:flush' }
+
   composer:
     label: 'Composer'
     desc: 'Runs `composer` command.'
     internal: true
     cmd: '{{.PHP_BIN}} {{.COMPOSER_BIN}} {{.CLI_ARGS}}'
 
+  php-cs-fixer:
+    label: 'PHP CS Fixer'
+    desc: 'Runs `php-cs-fixer` command.'
+    cmd: '{{.PHP_BIN}} {{.COMPOSER_BIN_DIR}}/php-cs-fixer fix -v --ansi --config {{.CONFIG_DIR}}/.php-cs-fixer.php {{.CLI_ARGS}}'
+
+  yaml-lint:
+    label: 'Yaml lint'
+    desc: 'Runs `yaml-lint` command.'
+    cmd: '{{.PHP_BIN}} {{.COMPOSER_BIN_DIR}}/yaml-lint --ansi {{.CLI_ARGS}}'
+
+  rector:
+    label: 'Rector'
+    desc: 'Runs `rector` command.'
+    cmd: '{{.PHP_BIN}} {{.COMPOSER_BIN_DIR}}/rector process --config={{.CONFIG_DIR}}/rector.php --ansi {{.CLI_ARGS}}'
+
   lint:
     label: 'Project lint'
     desc: 'Validates project files.'
     cmds:
       - task: lint:composer
+      - task: lint:php-cs-fixer
+      - task: lint:rector
+      - task: lint:yml
 
   lint:composer:
     label: 'Composer validation'
@@ -35,3 +73,49 @@ tasks:
         vars: { CLI_ARGS: 'validate --strict --ansi' }
       - task: composer
         vars: { CLI_ARGS: 'check-platform-req --ansi' }
+
+  lint:php-cs-fixer:
+    label: 'PHP CS Fixer validation'
+    desc: 'Lint php files.'
+    aliases:
+      - lint:php
+    cmds:
+      - task: php-cs-fixer
+        vars: { CLI_ARGS: '--dry-run --diff' }
+
+  lint:yml:
+    label: 'YML linter'
+    desc: 'Lints Y(A)ML files.'
+    aliases:
+      - ymllint
+      - yamllint
+      - lint:yaml
+    cmds:
+      - task: yaml-lint
+        vars: { CLI_ARGS: 'config ext {{.CLI_ARGS}}' }
+
+  lint:rector:
+    label: 'Rector check'
+    desc: 'Check Rector issues.'
+    cmds:
+      - task: rector
+        vars: { CLI_ARGS: '--dry-run' }
+
+  fix:
+    label: 'Fixing found issues'
+    desc: 'Trying for automated fixes for found problems.'
+    cmds:
+      - task: fix:php-cs-fixer
+      - task: fix:rector
+
+  fix:php-cs-fixer:
+    label: 'PHP CS Fixer'
+    desc: 'Fix PHP CS Fixer issues.'
+    cmds:
+      - task: php-cs-fixer
+
+  fix:rector:
+    label: 'Rector'
+    desc: 'Fix Rector issues.'
+    cmds:
+      - task: rector
