--- a/.github/workflows/ci-typo3.yml
+++ b/.github/workflows/ci-typo3.yml
@@ -40,7 +40,7 @@ jobs:
       matrix:
         command:
           - { name: '📦 Composer',     command: 'lint:composer' }
-          - { name: '🪶 PHP CS Fixer', command: 'lint:php-cs-fixer' }
+          - { name: '🪶 PHP CS Fixer', command: 'lint:php:cs-fixer' }
           - { name: '🏠 Rector',       command: 'lint:rector' }
           - { name: '📄 YML',          command: 'lint:yml' }
 
