--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -13,6 +13,7 @@ web_environment:
   - 'TYPO3_CONTEXT=Development/DDEV'
 hooks:
   pre-start:
-    # Add task to ddev if not already installed.
+    # Add pnpm and task to ddev if not already installed.
     - exec-host: |
+        ddev get --installed | grep -q 'envsa/ddev-pnpm' || ddev get envsa/ddev-pnpm &>/dev/null
         ddev get --installed | grep -q 'gebruederheitz/ddev-taskfile' || ddev get gebruederheitz/ddev-taskfile &>/dev/null
