--- a/.github/actions/setup-validation/action.yml
+++ b/.github/actions/setup-validation/action.yml
@@ -43,15 +43,13 @@ runs:
 
     - name: 🟧 Setup pnpm
       uses: pnpm/action-setup@v4
-      with:
-        version: 9
 
-#    - name: ❇️ Setup Node.js ${{ inputs.node }}
-#      uses: actions/setup-node@v4
-#      with:
-#        cache: pnpm
-#        node-version: ${{ inputs.node }}
-#
-#    - name: 📦 Install pnpm dependencies
-#      shell: bash
-#      run: pnpm i -sD --frozen-lockfile --color=always
+    - name: ❇️ Setup Node.js ${{ inputs.node }}
+      uses: actions/setup-node@v4
+      with:
+        cache: pnpm
+        node-version: ${{ inputs.node }}
+
+    - name: 📦 Install pnpm dependencies
+      shell: bash
+      run: pnpm i -sD --frozen-lockfile --color=always
