Add some config and play with seeder.

--- a/.github/workflows/ci-typo3.yml
+++ b/.github/workflows/ci-typo3.yml
@@ -55,4 +55,4 @@ jobs:
         uses: ./.github/actions/setup-validation
 
       - name: ${{ matrix.command.name }} validate
-        run: "task ${{ matrix.command.command }}"
+        run: 'task ${{ matrix.command.command }}'
