--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
 		"b13/make": "^0.1.8",
 		"helmich/typo3-typoscript-lint": "^3.2",
 		"lolli/dbdoctor": "^0.6.2",
+		"pagemachine/typo3-phinx": "^1.1",
 		"saschaegerer/phpstan-typo3": "^1.10",
 		"ssch/typo3-rector": "^2.6",
 		"typo3/coding-standards": "^0.8"
