--- a/.github/workflows/ci-typo3.yml
+++ b/.github/workflows/ci-typo3.yml
@@ -40,6 +40,7 @@ jobs:
       matrix:
         command:
           - { name: '📦 Composer',     command: 'lint:composer' }
+          - { name: '📝 Cspell',       command: 'lint:spellcheck' }
           - { name: '🔍 PHPStan',      command: 'lint:php:stan' }
           - { name: '🪶 PHP CS Fixer', command: 'lint:php:cs-fixer' }
           - { name: '🅿️ Prettier',     command: 'lint:prettier' }
