--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 	"type": "module",
 	"private": true,
 	"scripts": {
+		"spellcheck": "cspell -c config/.cspell.json '**' --quiet --color",
 		"lint:format": "prettier ext !**/pnpm-lock.yaml -c --cache --no-error-on-unmatched-pattern --color",
 		"lint:format:fix": "prettier ext !**/pnpm-lock.yaml -wl --cache --no-error-on-unmatched-pattern"
 	},
 	"devDependencies": {
+		"cspell": "^8.14.2",
 		"prettier": "^3.3.3"
 	},
 	"packageManager": "pnpm@9.10.0",
