--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ node_modules
 var
 .pnpm-store
 .php-cs-fixer.cache
+bootstrap/cache
 
 # Ignore .env files as they are personal.
 .env
@@ -22,3 +23,9 @@ dump
 
 # Ignore OS files.
 .DS_Store
+
+# Ignore Laravel files.
+public
+storage
+artisan
+.editorconfig
