Add default user tsconfig

--- a/ext/nts_site/Configuration/Services.yaml
+++ b/ext/nts_site/Configuration/Services.yaml
@@ -7,3 +7,7 @@ services:
   Typo3Notes\NtsSite\:
     resource: '../Classes/*'
     exclude: '../Classes/Domain/Model/*'
+
+  # Disable "Help Toolbar Item"
+  TYPO3\CMS\Backend\Backend\ToolbarItems\HelpToolbarItem:
+    autoconfigure: false
